libs/@local/hashql/ast/tests/ui/lowering/type-extractor/definition/constraints-invalid-location.jsonc
//@ run: fail
//@ description: Tests rejection of constraints in usage location
[
  "type",
  "SomeType",
  "List<T: Number>",
  //~^ ERROR Constraint on `T` not allowed here
  "_"
]
